--- a/.github/workflows/deploy-to-azure-app-service.yml
+++ b/.github/workflows/deploy-to-azure-app-service.yml
@@ -1,32 +1,33 @@
-name : "Deploy to azure app service"
-on :   
-  push: 
-    branches : [master]
+name: 'Deploy to Azure App Service'
+
+on:
+  push:
+    branches: [ master ]
   pull_request:
-    branches : [master]
-    
+    branches: [ master ]
+
+env:
+  AZURE_WEBAPP_PACKAGE_PATH: '.'
+  AZURE_WEBAPP_NAME: PSDeployDemo
+
 jobs:
-  Build :
-    runs-on : ubuntu-latest
-    env:
-      AZURE_WEBAPP_PACKAGE_PATH: '.'
-      AZURE_WEBAPP_NAME: Demo
+  build:
+
+    runs-on: ubuntu-latest
 
     steps:
-    
     - uses: actions/checkout@v2
     
-    - name : "Setup dotnet"
-    - uses : actions/setup-dotnet@v1
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.x
+        dotnet-version: 5.0.x
         
-    - name : "Restore packages"
-      run : dotnet restore
+    - name: Restore dependencies
+      run: dotnet restore
       
-    - name : "build the code"
-      run : dotnet build --configuration Release
+    - name: Build
+      run: dotnet build --configuration Release
       
     - name: Publish
-      run: dotnet publish -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp'
-  
+      run: dotnet publish -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp'        
