--- a/.github/workflows/deploy-app-service-using-spn.yml
+++ b/.github/workflows/deploy-app-service-using-spn.yml
@@ -14,9 +14,9 @@ env:
   AZURE_WEBAPP_NAME: sampleapp44
 
 jobs:
-  build:
+  Build-and-Deploy:
     runs-on: ubuntu-latest
-
+    environment : development
     steps:
     - uses: actions/checkout@v2
     
