--- a/.github/workflows/deploy-app-service-using-spn.yml
+++ b/.github/workflows/deploy-app-service-using-spn.yml
@@ -14,15 +14,11 @@ env:
   AZURE_WEBAPP_NAME: sampleapp44
 
 jobs:
-  Build-and-Deploy:
+  Build:
     runs-on: ubuntu-latest
-    environment : development
+    # environment : development
     steps:
-    - uses: actions/checkout@v2
-    
-    - uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - uses: actions/checkout@v2    
     
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
@@ -36,14 +32,35 @@ jobs:
       run: dotnet build --configuration Release
       
     - name: Publish
-      run: dotnet publish -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp'        
-
+      run: dotnet publish -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp' 
+      
+    - name: Upload artifacts for deployment
+      uses: actions/upload-artifact@v2
+      with:
+        name: sampleapp
+        path: '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp' 
+        
+  Deploy:     
+    runs-on: ubuntu-latest
+    needs: Build
+    environment : development
+    
+    steps:
+    - uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        
+    - name: Downlod artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: sampleapp
+        
     # Deploy to Azure Web apps
     - name: 'Run Azure webapp deploy action using publish profile credentials'
       uses: azure/webapps-deploy@v2
       with: 
         app-name: ${{ env.AZURE_WEBAPP_NAME }} # Replace with your app name
-        package: '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp'
+        package: .
       
     - name: logout
       run: |
