--- a/.github/workflows/deploy-app-service-using-spn.yml
+++ b/.github/workflows/deploy-app-service-using-spn.yml
@@ -5,14 +5,14 @@ on:
   push:
     branches:
       - master
+      - develop
     paths:
       - '**'
       - '!Documentation/**'
   
 env:
-  AZURE_WEBAPP_PACKAGE_PATH: '.'
-  AZURE_WEBAPP_NAME: sampleapp44
-
+  AZURE_WEBAPP_PACKAGE_PATH: '.' 
+  
 jobs:
   Build:
     runs-on: ubuntu-latest
@@ -40,7 +40,7 @@ jobs:
         name: sampleapp
         path: '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp' 
         
-  Deploy:     
+  Deploy_Development:     
     runs-on: ubuntu-latest
     needs: Build
     environment : development
@@ -50,7 +50,7 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
         
-    - name: Downlod artifacts
+    - name: Download artifacts
       uses: actions/download-artifact@v2
       with:
         name: sampleapp
@@ -59,14 +59,46 @@ jobs:
     - name: 'Run Azure webapp deploy action using publish profile credentials'
       uses: azure/webapps-deploy@v2
       with: 
-        app-name: ${{ env.AZURE_WEBAPP_NAME }} 
+        app-name: ${{ vars.AZURE_WEBAPP_NAME }} 
         package: .
         
     - uses: azure/appservice-settings@v1
       with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        app-settings-json: '${{ vars.APP_SETTINGS_VAR }}' 
+        app-name: ${{ vars.AZURE_WEBAPP_NAME }}
+        app-settings-json: '${{ vars.APP_SETTINGS }}' 
       
     - name: logout
       run: |
         az logout
+        
+  Deploy_Production:     
+    runs-on: ubuntu-latest
+    needs: [Build, Deploy_Development]
+    environment : production
+    
+    steps:
+    - uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        
+    - name: Download artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: sampleapp
+        
+    # Deploy to Azure Web apps
+    - name: 'Run Azure webapp deploy action using publish profile credentials'
+      uses: azure/webapps-deploy@v2
+      with: 
+        app-name: ${{ vars.AZURE_WEBAPP_NAME }} 
+        package: .
+        
+    - uses: azure/appservice-settings@v1
+      with:
+        app-name: ${{ vars.AZURE_WEBAPP_NAME }}
+        app-settings-json: '${{ vars.APP_SETTINGS }}' 
+      
+    - name: logout
+      run: |
+        az logout
+        
