--- a/.github/workflows/deploy-app-service-using-spn.yml
+++ b/.github/workflows/deploy-app-service-using-spn.yml
@@ -56,7 +56,7 @@ jobs:
         name: sampleapp
         
     # Deploy to Azure Web apps
-    - name: 'Run Azure webapp deploy action using publish profile credentials'
+    - name: 'Run Azure webapp deploy action using spn'
       uses: azure/webapps-deploy@v2
       with: 
         app-name: ${{ vars.AZURE_WEBAPP_NAME }} 
@@ -87,7 +87,7 @@ jobs:
         name: sampleapp
         
     # Deploy to Azure Web apps
-    - name: 'Run Azure webapp deploy action using publish profile credentials'
+    - name: 'Run Azure webapp deploy action using spn'
       uses: azure/webapps-deploy@v2
       with: 
         app-name: ${{ vars.AZURE_WEBAPP_NAME }} 
