--- a/.github/workflows/deploy-app-service-using-spn.yml
+++ b/.github/workflows/deploy-app-service-using-spn.yml
@@ -77,7 +77,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [Build, Deploy_Development]
     environment : production
-    if: ${{ github.ref == 'refs/heads/master' & github.event_name != 'pull_request' }}
+    if: ${{ github.ref == 'refs/heads/master' && github.event_name != 'pull_request' }}
         
     steps:
     - uses: azure/login@v1
